@@ -1,5 +1,7 @@
 === HEAD
 
+* Support deferrable exclusion constraints on PostgreSQL using the :deferrable option (mfoody) (#687)
+
 * Make Database#run and #<< accept SQL::PlaceholderLiteralString values (jeremyevans)
 
 * Deprecate :driver option in odbc adapter since it appears to be broken (jeremyevans)
